--- a/configs/vit_config.json
+++ b/configs/vit_config.json
@@ -2,9 +2,12 @@
   "MODEL_NAME": "vit",
   "BATCH_SIZE": 32,
   "TEST_BATCH_SIZE": 128,
-" NUM_EPOCHS": 10,
+"NUM_EPOCHS": 10,
   "NUM_RUNS": 1,
   "LR": 0.00001,
+  "EPSILON": 12,
+  "DELTA": 0.001,
+  "C": 1,
   "SAVE_MODEL": false,
   "DISABLE_DP": false,
   "OPTIMIZER": "adam",
