--- a/requirements.txt
+++ b/requirements.txt
@@ -1,68 +1,29 @@
-appdirs==1.4.4
-bleach==4.1.0
-Brotli==1.0.9
-certifi==2024.8.30
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-contourpy==1.2.0
-cycler==0.11.0
-docker-pycreds==0.4.0
-filelock==3.13.1
-fonttools==4.51.0
-gitdb==4.0.7
-GitPython==3.1.43
-idna==3.7
-Jinja2==3.1.4
-kaggle==1.6.17
-kiwisolver==1.4.4
-MarkupSafe==2.1.3
-matplotlib==3.9.1
-mkl-fft==1.3.8
-mkl-random==1.2.4
-mkl-service==2.4.0
+filelock==3.16.1
+fsspec==2024.9.0
+jinja2==3.1.4
+MarkupSafe==3.0.1
 mpmath==1.3.0
-networkx==3.3
+networkx==3.2.1
 numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.6.77
+nvidia-nvtx-cu12==12.1.105
 opacus==1.5.2
-opt-einsum==3.3.0
-packaging==24.1
-pandas==2.2.2
+opt-einsum==3.4.0
 pillow==10.4.0
-pip==24.2
-platformdirs==3.10.0
-ply==3.11
-protobuf==4.25.3
-psutil==5.9.0
-pyparsing==3.0.9
-PyQt5==5.15.10
-PyQt5-sip==12.13.0
-PySocks==1.7.1
-python-dateutil==2.9.0.post0
-python-slugify==5.0.2
-pytz==2024.1
-PyYAML==6.0.1
-requests==2.32.3
 scipy==1.13.1
-sentry-sdk==1.9.0
-setproctitle==1.2.2
-setuptools==72.1.0
-sip==6.7.12
-six==1.16.0
-smmap==4.0.0
-sympy==1.12
-text-unidecode==1.3
-torch==2.4.0
-torchaudio==2.4.0
-torchvision==0.19.0
-tornado==6.4.1
+sympy==1.13.3
+torch==2.4.1
+torchvision==0.19.1
 tqdm==4.66.5
 triton==3.0.0
-typing_extensions==4.11.0
-tzdata==2023.3
-unicodedata2==15.1.0
-Unidecode==1.2.0
-urllib3==2.2.2
-wandb==0.18.1
-webencodings==0.5.1
-wheel==0.43.0
+typing-extensions==4.12.2
